# Blast-Board

./: .editorconfig  .gitattributes  .gitignore  BoardBlast.slnx  Makefile  pyproject.toml  readme.md
.github/workflows/: main.yml
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/Animations/: CardRevealAnim.controller  CardRevealAnimation.anim  CardRevealCovered.anim  CardRevealExplosion.anim  CardTargetAnimation.anim  CardTargetAnimation.controller  CardTargetIdle.anim
Assets/Fonts/: Jersey10-Regular SDF.asset  Jersey15-Regular SDF.asset  Jersey25-Regular SDF.asset  JosefinSans-Italic-VariableFont_wght SDF.asset  JosefinSans-VariableFont_wght SDF.asset
Assets/Localization/: Localization Settings.asset
Assets/Plugins/Android/: mainTemplate.gradle
Assets/Prefabs/: CardButton.prefab  LevelDisplay.prefab  Scoreboard.prefab  SoundFXObject.prefab  ValuesTile.prefab
Assets/Scenes/: GameScene.unity  Tutorial.unity  TutorialScene.unity
Assets/Scripts/: BoardController.cs  CardButton_Interactions.cs  Game.asmdef  GameState.cs  LevelDefinition.cs  RawBoard.cs  ValuesTile.cs
Assets/Tests/: GameSessionTests.cs  GameStateTests.cs  LevelDefinitionTests.cs  LevelDeltaTests.cs  RawBoardTests.cs
ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  GooglePlayGameSettings.txt  GvhProjectSettings.xml  IOSAppIconAppearanceSettings.asset  ProjectSettings.asset
tests-dotnet/BoardBlast.Tests/: GameStateTests.cs  LevelDefinitionTests.cs  RawBoardTests.cs
(+52 files in other folders)
