[project]
name = "boardblast"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bump-my-version>=1.2.7",
]

[tool.bumpversion]
current_version = "1.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
commit = true
message = "Bump version: {current_version} → {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "ProjectSettings/ProjectSettings.asset"
search = "bundleVersion: {current_version}"
replace = "bundleVersion: {new_version}"

[[tool.bumpversion.files]]
filename = "Assets/Localization/Table Collections/UI/UI_en.asset"
search = "m_Localized: v{current_version}"
replace = "m_Localized: v{new_version}"

[[tool.bumpversion.files]]
filename = "Assets/Localization/Table Collections/UI/UI_es.asset"
search = "m_Localized: v{current_version}"
replace = "m_Localized: v{new_version}"
